--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <h2 class="text-2xl font-bold mb-4 text-blue-300">Categories</h2>
       <div class="grid grid-cols-2 md:grid-cols-6 gap-4">
         <a href="tools.html" class="category-button bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 font-semibold text-center transition block border-2 border-white neon-border">Termux Tools</a>
-        <a href="#apps" class="category-button bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 font-semibold text-center transition block border-2 border-white neon-border">Apps</a>
+        <a href="apps.html" class="category-button bg-gradient-to-r from-purple-600 to-pink-500 text-white shadow-lg rounded-lg p-4 font-semibold text-center transition block border-2 border-white neon-border">Apps</a>
       </div>
     </section><!-- Termux Tools -->
 <section id="tools" class="mb-12 slide-in">
