--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
       </div>
       <h3 class="text-xl font-bold">DTECH URL VIDEO DOWNLOADER</h3>
     </div>
-    <p class="text-gray-300 mb-4">this tools lets you download any kind of  video from any type of url (tik tok ,facebook,youtube,instagram and any other site)</p>
+    <p class="text-gray-300 mb-4">this tools lets you download any kind of video from any type of url (tik tok ,facebook,youtube,instagram and any other site)</p>
 
     <div class="mb-4">
       <label class="text-sm text-blue-300 mb-1 block">Installation:</label>
@@ -201,7 +201,7 @@
     </div>
 
     <div class="flex justify-between mt-6">
-      <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded glow flex items-center">
+      <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded glow flex items-center" onclick="window.open('https://cafewarriors.com/spymr251ew?key=ce76edf7e5c6e4907177e712dc143365','_blank')">
         <i class="fas fa-info-circle mr-2"></i> More Info
       </button>
       <button class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded glow flex items-center" onclick="window.open('https://youtu.be/5GCuMxRlFpY?si=HpwtEQ7FXFn0LXS8','_blank')">
