--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded glow flex items-center" onclick="window.open('https://cafewarriors.com/spymr251ew?key=ce76edf7e5c6e4907177e712dc143365','_blank')">
         <i class="fas fa-info-circle mr-2"></i> More Info
       </button>
-      <button class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded glow flex items-center" onclick="window.open('sj','_blank')">
+      <button class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded glow flex items-center" onclick="window.open('https://youtube.com/shorts/x_wMwxZbwMo?si=VsCiC4Qof0Ziw2gW','_blank')">
         <i class="fab fa-youtube mr-2"></i> Tutorial
       </button>
     </div>
