--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                 <i class="fas fa-info-circle mr-2"></i> More Info
               </button>
               <button class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded glow flex items-center"
-                      onclick="window.open('https://youtu.be/wireshark-tutorial','_blank')">
+                      onclick="window.open('https://drive.google.com/file/d/1YsC-ziBEQSjRB5iIjlK2sRMNjxzRT0Tc/view?usp=drivesdk','_blank')">
                 <i class="fab fa-youtube mr-2"></i> Tutorial
               </button>
             </div>
