--- a/index.html
+++ b/index.html
@@ -219,8 +219,12 @@
     <div class="mb-4">
       <label class="text-sm text-blue-300 mb-1 block">Installation:</label>
       <div class="command-box p-3 rounded mb-2 flex justify-between items-center">
-        <code class="text-green-400">pip install requests colorama</code>
-        <button class="copy-btn bg-blue-600 hover:bg-blue-700 text-white px-3 py-1 rounded text-sm" data-cmd="pip install requests colorama">
+        <code class="text-green-400">pip install requests colorama
+pkg install openssl
+pkg install clang</code>
+        <button class="copy-btn bg-blue-600 hover:bg-blue-700 text-white px-3 py-1 rounded text-sm" data-cmd="pip install requests colorama
+pkg install openssl
+pkg install clang">
           <i class="far fa-copy"></i>
         </button>
       </div>
