--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ pkg install clang">
       <button class="bg-blue-600 hover:bg-blue-700 text-white px-4 py-2 rounded glow flex items-center" onclick="window.open('https://www.preasx24.co.za/more-info.html','_blank')">
         <i class="fas fa-info-circle mr-2"></i> More Info
       </button>
-      <button class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded glow flex items-center" onclick="window.open('jje','_blank')">
+      <button class="bg-red-600 hover:bg-red-700 text-white px-4 py-2 rounded glow flex items-center" onclick="window.open('https://drive.google.com/file/d/1bIHGwB-2SrV6WwPR1d5jYBJc2rvRRV5M/view?usp=drivesdk','_blank')">
         <i class="fab fa-youtube mr-2"></i> Tutorial
       </button>
     </div>
