--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@ pkg install clang">
         </button>
       </div>
       <div class="command-box p-3 rounded mb-2 flex justify-between items-center">
-        <code class="text-green-400">neofetchneofetch</code>
+        <code class="text-green-400">neofetch</code>
         <button class="copy-btn bg-blue-600 hover:bg-blue-700 text-white px-3 py-1 rounded text-sm" data-cmd="neofetchneofetch">
           <i class="far fa-copy"></i>
         </button>
