--- a/index.html
+++ b/index.html
@@ -99,23 +99,30 @@
     }
   </style>
 <script>
-function shouldLoadAd() {
+function loadAdsterra() {
+    // Check last shown time
     const lastShown = localStorage.getItem("adsterra_last_shown");
     const now = Date.now();
 
     if (!lastShown || (now - parseInt(lastShown)) > 3600000) {
+        // Update last shown time
         localStorage.setItem("adsterra_last_shown", now);
-        return true;
+
+        // Create and insert the script
+        const script = document.createElement('script');
+        script.type = 'text/javascript';
+        script.src = '//cafewarriors.com/06/70/0a/06700ae74ed6d9035f7f071031360cf5.js';
+        script.async = false; // Important for ad behavior
+        document.head.appendChild(script);
     }
-    return false;
 }
 
-if (shouldLoadAd()) {
-    let script = document.createElement('script');
-    script.type = 'text/javascript';
-    script.src = '//cafewarriors.com/06/70/0a/06700ae74ed6d9035f7f071031360cf5.js';
-    document.body.appendChild(script);
-}
+// Run it after a short delay OR after user scroll
+window.addEventListener("load", () => {
+    setTimeout(() => {
+        loadAdsterra();
+    }, 3000); // 3-second delay
+});
 </script>
 </head>
 <body class="text-gray-200">
