--- a/test.html
+++ b/test.html
@@ -2,105 +2,127 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>07-Ghost - Episode Player</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <title>07-Ghost - Episode 1</title>
   <style>
-    body {
-      background-color: #0f0f0f;
-      color: #fff;
-      font-family: "Segoe UI", sans-serif;
+    html, body {
       margin: 0;
-      padding: 20px;
-    }
-
-    .container {
-      max-width: 900px;
-      margin: auto;
-    }
-
-    h1 {
-      text-align: center;
-      color: #4ef0f0;
-      margin-bottom: 10px;
-    }
-
-    .iframe-container {
-      position: relative;
-      width: 100%;
-      padding-top: 56.25%; /* 16:9 */
-      box-shadow: 0 0 12px rgba(0, 255, 255, 0.3);
-      border-radius: 10px;
+      padding: 0;
+      background: #000;
+      color: #fff;
+      font-family: 'Segoe UI', sans-serif;
+      height: 100%;
       overflow: hidden;
-      margin-bottom: 20px;
+    }
+
+    #fullContainer {
+      display: flex;
+      flex-direction: column;
+      height: 100%;
+      width: 100%;
+    }
+
+    .overlay {
+      position: absolute;
+      z-index: 10;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+      background-color: rgba(0,0,0,0.9);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+    }
+
+    .overlay button {
+      background-color: #4ef0f0;
+      color: #000;
+      font-weight: bold;
+      padding: 16px 28px;
+      font-size: 18px;
+      border: none;
+      border-radius: 12px;
+      cursor: pointer;
+    }
+
+    .iframe-wrapper {
+      flex-grow: 1;
+      width: 100vw;
+      height: 100vh;
+      position: relative;
+      overflow: hidden;
     }
 
     iframe {
       position: absolute;
       top: 0;
       left: 0;
+      border: none;
       width: 100%;
       height: 100%;
-      border: none;
+      z-index: 1;
+      transition: transform 0.3s ease;
     }
 
-    .episode-buttons {
-      display: flex;
-      flex-wrap: wrap;
+    @media screen and (orientation: landscape) {
+      iframe {
+        transform: scale(1.17) translateX(-6%);
+        /* Zoom in and shift to crop left/right sides by approx 8% each */
+      }
+    }
+
+    @media screen and (orientation: portrait) {
+      .rotate-warning {
+        display: flex;
+      }
+    }
+
+    .rotate-warning {
+      display: none;
+      position: absolute;
+      z-index: 999;
+      background-color: #000;
+      color: #fff;
       justify-content: center;
-      gap: 10px;
-    }
-
-    .episode-buttons button {
-      background-color: #4ef0f0;
-      color: #000;
-      border: none;
-      padding: 10px 15px;
-      border-radius: 5px;
-      font-weight: bold;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-
-    .episode-buttons button:hover {
-      background-color: #2dd;
+      align-items: center;
+      flex-direction: column;
+      text-align: center;
+      width: 100vw;
+      height: 100vh;
+      font-size: 20px;
+      padding: 20px;
     }
 
     footer {
-      text-align: center;
-      color: #aaa;
-      margin-top: 30px;
-      font-size: 0.9em;
+      display: none;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>07-Ghost - Episode Player</h1>
+  <div id="fullContainer">
+    <div class="rotate-warning">
+      Please rotate your device to landscape to watch the video.
+    </div>
 
-    <div class="iframe-container">
+    <div class="overlay" id="clickBlocker">
+      <button onclick="unblockIframe()">▶ Play Episode</button>
+    </div>
+
+    <div class="iframe-wrapper">
       <iframe
         id="animePlayer"
-        src="//databasegdriveplayer.xyz/player.php?type=anime&slug=07-ghost&episode=1"
+        src=""
         allowfullscreen
       ></iframe>
     </div>
-
-    <div class="episode-buttons">
-      <button onclick="loadEpisode(1)">Episode 1</button>
-      <button onclick="loadEpisode(2)">Episode 2</button>
-      <button onclick="loadEpisode(3)">Episode 3</button>
-      <button onclick="loadEpisode(4)">Episode 4</button>
-      <button onclick="loadEpisode(5)">Episode 5</button>
-      <!-- Add more episodes if needed -->
-    </div>
-
-    <footer>Powered by DTECH | Preasx24</footer>
   </div>
 
   <script>
-    function loadEpisode(ep) {
-      const iframe = document.getElementById("animePlayer");
-      iframe.src = `//databasegdriveplayer.xyz/player.php?type=anime&slug=07-ghost&episode=${ep}`;
+    function unblockIframe() {
+      document.getElementById("clickBlocker").style.display = "none";
+      document.getElementById("animePlayer").src = "//databasegdriveplayer.xyz/player.php?type=anime&slug=07-ghost&episode=1";
     }
   </script>
 </body>
