--- a/test.html
+++ b/test.html
@@ -435,7 +435,7 @@
   </div>
 
   <script>
-    const jsonFiles = ['part1.json', 'part2.json']; // Replace with your actual JSON files
+    const jsonFiles = ['part1.json', 'finish.json', 'part2.json']; // Replace with your actual JSON files
     let allVideos = [];
     let currentSearchResults = [];
 
