--- a/test.html
+++ b/test.html
@@ -443,7 +443,7 @@
   </div>
 
   <script>
-    const jsonFiles = ['part1.json', 'finish.json', 'part2.json']; // Replace with your actual JSON files
+    const jsonFiles = ['part1.json', 'finish.json', 'finis.json', 'part2.json']; // Replace with your actual JSON files
     let allVideos = [];
     let searchIndex = {};
     let debounceTimer;
