--- a/test.html
+++ b/test.html
@@ -499,7 +499,7 @@
   </div>
 
   <script>
-    const jsonFiles = ['part1.json', 'part2.json']; // Replace with your actual JSON files
+    const jsonFiles = ['part1.json', 'finish.json',    'finis.json', 'part2.json']; // Replace with your actual JSON files
     let allVideos = [];
     let animeMap = new Map(); // Maps anime title to its episodes
     let debounceTimer;
