--- a/test.html
+++ b/test.html
@@ -457,9 +457,9 @@
     <div class="header">
       <div class="logo">
         <i class="fas fa-play-circle logo-icon floating"></i>
-        <h1>NEXUS ANIME</h1>
+        <h1>🧑‍🦯🧑‍🦯 ANIME</h1>
       </div>
-      <div class="subtitle">ULTRA-FAST STREAMING EXPERIENCE</div>
+      <div class="subtitle">ULTRA-FAST SUPER DUPER ANIME STEAMER</div>
     </div>
     
     <div class="search-container">
@@ -495,7 +495,7 @@
   </div>
 
   <div class="footer">
-    <p>© 2023 NEXUS ANIME | LIGHTNING-FAST SEARCH</p>
+    <p>© 2025 D-TECH ANIME | W</p>
   </div>
 
   <script>
