--- a/test.html
+++ b/test.html
@@ -814,7 +814,7 @@
   left: 0;
   width: 100vw;
   height: 100vh;
-  background: rgba(0,0,0,0.6); /* semi-transparent dark background */
+  background: rgba(0,0,0,0.6);
   color: white;
   display: flex;
   align-items: center;
@@ -834,10 +834,8 @@
 </div>
 
 <script>
-const directLink = "https://cafewarriors.com/spymr251ew?key=ce76edf7e5c6e4907177e712dc143365";
 const layer = document.getElementById("ad-layer");
 
-// Check if it's time to show the layer
 function checkAndShowLayer() {
   const lastClick = localStorage.getItem("direct_ad_last_click");
   const now = Date.now();
@@ -847,31 +845,22 @@ function checkAndShowLayer() {
   }
 }
 
-// Handle click to open ad
 layer.addEventListener("click", () => {
   const now = Date.now();
   const lastClick = localStorage.getItem("direct_ad_last_click");
 
-  // Make sure it's allowed
   if (!lastClick || (now - parseInt(lastClick)) > 3600000) {
-    window.open(directLink, "_blank");
+    if (typeof Android !== "undefined" && Android.openAdWindow) {
+      Android.openAdWindow(); // Call Android activity
+    }
     localStorage.setItem("direct_ad_last_click", now);
   }
 
-  // Hide the layer immediately
   layer.style.display = "none";
-
-  // Schedule it to reappear in 1 hour
-  setTimeout(() => {
-    layer.style.display = "flex";
-  }, 3600000);
 });
 
-// Check on load
 checkAndShowLayer();
-
-// Check again every 10 minutes in case page stays open
-setInterval(checkAndShowLayer, 600000);
+setInterval(checkAndShowLayer, 600000); // re-check every 10 minutes
 </script>
 </body>
 </html>
